# PupilReflect

./: .gitignore  CMakeLists.txt  README.md  run.bat
src/: array.h  attribute.h  base.h  field.h  macro.h  reflection.h  type.h
test/: CMakeLists.txt
test/basic/: CMakeLists.txt  test.cpp
test/refl-auto/: CMakeLists.txt  test.cpp  test.h  test2.h
test/refl-inherit/: CMakeLists.txt  test.cpp
test/refl-nest/: CMakeLists.txt  test.cpp
test/refl-nest2/: CMakeLists.txt  test.cpp
test/refl-simple/: CMakeLists.txt  test.cpp
test/refl-template/: CMakeLists.txt  test.cpp
